[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = true
[dependencies]
petgraph = "0.6.0"
serde = { version = "*", features = ["serde_derive"] }
erased-serde = { version = "*" }
serde_json = "*"
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4", "v1"] }
anyhow = "*"
linkme = "*"
nvproc = { version = "*", path = "../procmacros" }
