[package]
name = "nvcore"
version = "0.0.0"
description = "Novella core"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
test = true
[dependencies]
num = "0.4.0"
nvproc = { path = "../procmacros" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bevy_ecs = "0.6.1"
dyn-clone = "1.0.4"
anyhow = "1.0.54"
petgraph = "0.6.0"
chrono = "0.4.19"
