[package]
name = "nvcore"
version = "0.1.0"
description = "Novella core"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
test = true
[dependencies]
num = "0.4.0"
nvproc = { path = "../procmacros" }
common = { version = "*", path = "../common" }
dyn-clone = "1.0.4"
chrono = "0.4.19"
proc-macro2 = "*"
lazy_static = "*"
linkme = "*"
components_track = { path = "../components_track" }
kin = { path = "../kin" }
