[package]
name = "nvfs"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
common = { path = "../common" }
nvcore = { version = "*", path = "../core" }
bincode = "*"
nvproc = { version = "*", path = "../procmacros" }
