[package]
name = "nvproc"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = { version = "*", features = ["derive", "full"] }
quote = "*"
uuid = { version = "*", features = ["serde", "v4"] }
utils = { version = "0.1.0", path = "../utils" }
