[package]
name = "sdsl"
version = "0.1.0"
edition = "2021"
description = "A simple DSL for Novella, allowing one to specify Entities manually. It meant to be very easy for non-technical people to more easily create Entity stacks."
[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
