[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvcore = { version = "*", path = "../core" }
tonic={version="0.8"}
tokio={version = "1.0", features = ["macros", "rt-multi-thread"]}
prost="*"
common={version="*",path="../common"}


[build-dependencies]
tonic-build={version="0.8", features = ["prost"]}