[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = true
[dependencies]
petgraph = "0.6.0"
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
anyhow = "*"
